--- a/front-server/src/App.css
+++ b/front-server/src/App.css
@@ -27,6 +27,8 @@
 }
 
 body {
+  min-height: 100vh;
+  width: 100vw;
   background-color: var(--background-color-white);
   color: var(--font-color);
   line-height: 1.4;
