--- a/front-server/src/App.css
+++ b/front-server/src/App.css
@@ -28,7 +28,7 @@
 
 body {
   min-height: 100vh;
-  width: 100vw;
+  min-width: 100vw;
   background-color: var(--background-color-white);
   color: var(--font-color);
   line-height: 1.4;
