--- a/front-server/src/App.css
+++ b/front-server/src/App.css
@@ -104,8 +104,8 @@ body {
   justify-content: flex-end;
   padding: .5vh .5vw;
   font-size: 2.3vh;
-  font-weight: 100;
-  gap: 10px;
+  font-weight: 10vh;
+  gap: 1.2vh;
 }
 
 .text-btn button {
