--- a/front-server/src/App.css
+++ b/front-server/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #e4eefb;
   --secondary-color: #aecdf2;
-  --tertiary-color: #9fc4f0;        /* input background */
+  --tertiary-color: #9fc4f0;        /* input background + add btn */
   --fourthary-color: #77ace9;      /* menu background ≡ */
 
   --button-blue-color: #4A90E2;
