--- a/front-server/src/components/Section/Section.css
+++ b/front-server/src/components/Section/Section.css
@@ -191,6 +191,23 @@
   gap: 1rem;
 }
 
+
+.btn-create-question {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    gap: 0.2rem;
+    background: #5c6ef6;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+
 /* Responsive */
 @media (max-width: 768px) {
   .section-header {
